Fixed main logo sizing on small screens

--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -12,7 +12,10 @@ button {
   background-position: center;
   background-repeat: no-repeat;
 }
-
+.auto-fill {
+  flex: 0;
+  margin: auto;
+}
 section {
   max-width: $breakpoint-md;
   margin: auto;
